--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "hono": "^4.6.3",
     "lucide-react": "^0.471.1",
     "motion": "^12.4.7",
-    "next": "14.2.14",
+    "next": "^14.2.28",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
     "nprogress": "^0.2.0",
