--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "rimraf": "^4.0.0",
     "glob": "^9.0.0",
     "inflight": "^2.0.0",
-    "eslint": "^9.0.0"
+    "eslint": "^9.0.0",
+    "node-domexception": "npm:domexception@latest"
   }
 }
